using MediatR;
using POC.Api.Hubs;
using POC.Contracts.Screen;
using POC.Infrastructure.Models;
using POC.Infrastructure.Repositories;
using POC.Api.Hubs;
using POC.Contracts;
using POC.Infrastructure.Common.Exceptions;
using POC.Infrastructure.Extensions;

namespace POC.App.Commands.PairScreen;

public class PairScreenCommandHandler(
    GuestHub hub,
    ScreenProfileRepository screenProfileRepository,
    ScreenRepository screenRepository)
    : IRequestHandler<PairScreenCommand, ScreenDto>
{

    public async Task<ScreenDto> Handle(PairScreenCommand request, CancellationToken cancellationToken)
    {
        // var screens = await screenRepository.GetAllAsync();
        // var s = screens.FirstOrDefault(s => s.IpAddress == request.PairScreenDto.IpAddress);
        // var s = screenRepository.GetScreenByIp(request.PairScreenDto.IpAddress);
        // if (s != null) throw new ScreenAlreadyPairedException();
        
        // var exists = await hub.IsIpConnected(request.PairScreenDto.IpAddress);
        // if (!exists) throw new IpNotInGuestHubException();
        
        var screenProfile = await screenProfileRepository.GetByIdAsync(request.PairScreenDto.ScreenProfileId);
        if (screenProfile == null) throw new ScreenProfileNotFoundException();
        
        var screen = new Screen
        {
            // IpAddress = request.PairScreenDto.PairingCode,
            ScreenProfileId = request.PairScreenDto.ScreenProfileId,
            ScreenProfile = screenProfile
        };
        
        var screenDto = screen.ToScreenDto();
        //throws exception so should be prior to adding to the repository
        await hub.SendMessageAddScreen(request.PairScreenDto.PairingCode, screenDto);
        
        await screenRepository.AddAsync(screen);
        
        screenProfile.Screens.Add(screen);
        await screenProfileRepository.UpdateAsync(screenProfile);
        
        return screenDto;
    }
}